--- a/apps/extension/tsconfig.json
+++ b/apps/extension/tsconfig.json
@@ -13,7 +13,7 @@
     "useUnknownInCatchVariables": false,
     "resolveJsonModule": true,
     "paths": {
-      "@onflow/flow-wallet-shared/*": ["./packages/shared/src/*"],
+      "@onflow/flow-wallet-shared/*": ["../../packages/shared/src/*"],
       "@/*": ["./src/*"]
     },
     "lib": ["ES2021.String", "DOM", "DOM.Iterable"],
@@ -37,8 +37,6 @@
     "webpack.config.ts",
     "postcss.config.mjs",
     "svgTransform.js",
-    ".storybook/**/*",
-    "src/extension-shared/utils/console-log.ts",
-    "packages/shared/src/**/*"
+    ".storybook/**/*"
   ]
 }
