--- a/apps/extension/tsconfig.json
+++ b/apps/extension/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "ESNext",
     "moduleResolution": "bundler",
     "noImplicitAny": false,
+    "composite": true,
     "checkJs": true,
     "strict": true,
     "esModuleInterop": true,
