Updated .gitignore paths, added env.example for configuration, updated tsconfig for module resolution, and hidden  manifest and react-devtools files.
Closes #1124

--- a/apps/extension/tsconfig.json
+++ b/apps/extension/tsconfig.json
@@ -7,7 +7,7 @@
     "target": "ESNext",
     "moduleResolution": "bundler",
     "noImplicitAny": false,
-    "composite": true,
+    "composite": false,
     "checkJs": true,
     "strict": true,
     "esModuleInterop": true,
@@ -15,6 +15,7 @@
     "resolveJsonModule": true,
     "paths": {
       "@onflow/flow-wallet-shared/*": ["../../packages/shared/src/*"],
+      "@onflow/flow-wallet-reducers/*": ["../../packages/reducers/src/*"],
       "@/*": ["./src/*"]
     },
     "lib": ["ES2021.String", "DOM", "DOM.Iterable"],
