--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -45,30 +45,29 @@
     "@coinbase/cbpay-js": "^1.10.0",
     "@debank/common": "^0.3.60",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.1.2",
-    "@mui/material": "^7.1.2",
-    "@mui/system": "^7.1.1",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
+    "@mui/system": "^7.2.0",
     "@noble/secp256k1": "^1.7.2",
-    "@onflow/fcl": "^1.18.0",
+    "@onflow/fcl": "^1.19.0",
     "@onflow/flow-wallet-reducers": "workspace:*",
     "@onflow/flow-wallet-shared": "workspace:*",
-    "@reown/walletkit": "^1.2.7",
+    "@reown/walletkit": "^1.2.8",
     "@trustwallet/wallet-core": "^4.3.6",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
-    "@walletconnect/core": "^2.21.3",
+    "@walletconnect/core": "^2.21.4",
     "@walletconnect/jsonrpc-utils": "^1.0.8",
-    "@walletconnect/sign-client": "^2.21.3",
-    "@walletconnect/types": "^2.21.3",
-    "@walletconnect/utils": "^2.21.3",
+    "@walletconnect/sign-client": "^2.21.4",
+    "@walletconnect/types": "^2.21.4",
+    "@walletconnect/utils": "^2.21.4",
     "aes-js": "^3.1.2",
     "assert": "^2.1.0",
     "bignumber.js": "^9.3.0",
     "bip39": "^3.1.0",
     "browser-passworder": "^2.0.3",
     "compare-versions": "^4.1.4",
-    "copy-webpack-plugin": "^12.0.2",
     "cross-fetch": "^4.1.0",
     "crypto-browserify": "^3.12.1",
     "dayjs": "^1.11.13",
@@ -77,7 +76,7 @@
     "eth-rpc-errors": "^4.0.3",
     "ethereum-hdwallet": "^0.0.26",
     "ethereumjs-util": "^7.1.5",
-    "ethers": "^6.14.4",
+    "ethers": "^6.15.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.14.1",
     "hdkey": "0.8.0",
@@ -94,7 +93,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-highlight": "^0.15.0",
-    "react-hook-form": "^7.58.1",
+    "react-hook-form": "^7.60.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-qrcode-logo": "^3.0.0",
     "react-router": "^7.6.3",
@@ -116,38 +115,40 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
+    "@eslint/js": "^9.30.1",
     "@metamask/eth-sig-util": "^8.2.0",
-    "@playwright/test": "^1.53.1",
-    "@storybook/addon-docs": "^9.0.12",
-    "@storybook/addon-onboarding": "^9.0.12",
-    "@storybook/addon-themes": "^9.0.12",
+    "@playwright/test": "^1.53.2",
+    "@storybook/addon-docs": "^9.0.16",
+    "@storybook/addon-onboarding": "^9.0.16",
+    "@storybook/addon-themes": "^9.0.16",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
-    "@storybook/react-webpack5": "^9.0.12",
+    "@storybook/react-webpack5": "^9.0.16",
     "@svgr/webpack": "^5.5.0",
     "@types/chrome": "^0.0.281",
     "@types/koa-compose": "^3.2.8",
-    "@types/lodash": "^4.17.18",
-    "@types/node": "^22.15.32",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^22.16.2",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@types/webpack": "^5.28.5",
-    "@typescript-eslint/eslint-plugin": "^8.34.1",
-    "@typescript-eslint/parser": "^8.34.1",
+    "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "@typescript-eslint/parser": "^8.36.0",
     "@vitest/coverage-v8": "3.2.4",
     "@welldone-software/why-did-you-render": "^8.0.3",
     "autoprefixer": "^10.4.21",
     "chromatic": "^12.2.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
-    "dotenv": "^16.5.0",
-    "dotenv-webpack": "^8.1.0",
+    "dotenv": "^16.6.1",
+    "dotenv-webpack": "^8.1.1",
     "enquirer": "^2.4.1",
-    "eslint": "^9.29.0",
+    "eslint": "^9.30.1",
     "eslint-import-resolver-typescript": "^3.10.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-storybook": "^9.0.12",
+    "eslint-plugin-storybook": "^9.0.16",
     "eslint-plugin-unused-imports": "^4.1.4",
     "file-loader": "^6.2.0",
     "globals": "^15.15.0",
@@ -162,12 +163,13 @@
     "postcss-import": "^16.1.1",
     "postcss-loader": "^5.3.0",
     "postcss-nested": "^7.0.2",
-    "prettier": "^3.5.3",
-    "react-devtools": "^6.1.2",
-    "react-i18next": "^15.5.3",
+    "prettier": "^3.6.2",
+    "react-devtools": "^6.1.5",
+    "react-i18next": "^15.6.0",
+    "rimraf": "^6.0.1",
     "shelljs": "^0.8.5",
     "sinon-chrome": "^3.0.1",
-    "storybook": "^9.0.12",
+    "storybook": "^9.0.16",
     "storybook-addon-remix-react-router": "^5.0.0",
     "style-loader": "^4.0.0",
     "table": "^6.9.0",
@@ -175,7 +177,7 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1",
+    "typescript-eslint": "^8.36.0",
     "typescript-transform-paths": "^3.5.5",
     "url-loader": "^4.1.1",
     "vitest": "^3.2.4",
