Created common config between mac and windows
Closes #1124

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -6,16 +6,12 @@
   "scripts": {
     "prepare:dev": "pnpx tsx ./build/prepareManifest.ts dev",
     "prepare:pro": "pnpx tsx ./build/prepareManifest.ts pro",
-    "clean": "mkdir -p dist && rm -rf dist/* && cp -r _raw/* dist",
-    "winClean": "if not exist dist mkdir dist && del /Q /F dist\\* && xcopy /E /I _raw dist",
-    "winBuild:dev": "set NODE_OPTIONS=--max-old-space-size=8192 && copy _raw\\manifest\\manifest.dev.json _raw\\manifest.json && pnpm run prepare:dev && pnpm run winClean && node build/webpack-cli-wrapper.cjs --progress --env config=dev",
-    "winBuild:dev-ci": "set NODE_OPTIONS=--max-old-space-size=8192 && copy _raw\\manifest\\manifest.dev.json _raw\\manifest.json && pnpm run prepare:dev && pnpm run winClean && node build/webpack-cli-wrapper.cjs --env config=dev --no-watch",
-    "build:dev": "NODE_OPTIONS=--max-old-space-size=8192 && cp _raw/manifest/manifest.dev.json _raw/manifest.json && pnpm run prepare:dev && pnpm run clean && node build/webpack-cli-wrapper.cjs --progress --env config=dev",
-    "build:dev-ci": "NODE_OPTIONS=--max-old-space-size=8192 && cp _raw/manifest/manifest.dev.json _raw/manifest.json && pnpm run prepare:dev && pnpm run clean && node build/webpack-cli-wrapper.cjs --env config=dev --no-watch",
-    "winBuild:pro": "copy _raw\\manifest\\manifest.pro.json _raw\\manifest.json && pnpm run prepare:pro && pnpm run winClean && node build/webpack-cli-wrapper.cjs --progress --env config=pro",
-    "build:ci": "cp _raw/manifest/manifest.pro.json _raw/manifest.json && pnpm run prepare:pro && pnpm run clean && node build/webpack-cli-wrapper.cjs --env config=pro",
-    "build:pro": "cp _raw/manifest/manifest.pro.json _raw/manifest.json && pnpm run prepare:pro && pnpm run clean && node build/webpack-cli-wrapper.cjs --progress --env config=pro",
-    "build:test": "cp _raw/manifest/manifest.dev.json _raw/manifest.json && pnpm run clean && node build/webpack-cli-wrapper.cjs --progress --env config=none",
+    "clean": "rimraf dist",
+    "build:dev": "cross-env NODE_OPTIONS=--max-old-space-size=8192 pnpm run prepare:dev && pnpm run clean && node build/webpack-cli-wrapper.cjs --progress --env config=dev",
+    "build:dev-ci": "cross-env NODE_OPTIONS=--max-old-space-size=8192 pnpm run prepare:dev && pnpm run clean && node build/webpack-cli-wrapper.cjs --env config=dev --no-watch",
+    "build:ci": "pnpm run prepare:pro && pnpm run clean && node build/webpack-cli-wrapper.cjs --env config=pro",
+    "build:pro": "pnpm run prepare:pro && pnpm run clean && node build/webpack-cli-wrapper.cjs --progress --env config=pro",
+    "build:test": "pnpm run prepare:dev && pnpm run clean && node build/webpack-cli-wrapper.cjs --progress --env config=none",
     "lint:fix": "eslint --fix .",
     "lint": "eslint .",
     "format:fix": "prettier --write .",
