fixed: update url import
Closes #1024

--- a/apps/extension/env.example
+++ b/apps/extension/env.example
@@ -33,6 +33,10 @@ MIXPANEL_TOKEN=""
 API_GO_SERVER_URL=""
 API_BASE_URL=""
 
+# External URLs
+TERMS_OF_SERVICE_URL="https://lilico.app/about/terms"
+PRIVACY_POLICY_URL="https://lilico.app/about/privacy-policy"
+
 # Scripts public key
 SCRIPTS_PUBLIC_KEY=""
 
