Moved extension-shared to a package
Closes #1177

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -12,8 +12,8 @@
     "build:ci": "pnpm run prepare:pro && pnpm run clean && node build/webpack-cli-wrapper.cjs --env config=pro",
     "build:pro": "pnpm run prepare:pro && pnpm run clean && node build/webpack-cli-wrapper.cjs --progress --env config=pro",
     "build:test": "pnpm run prepare:dev && pnpm run clean && node build/webpack-cli-wrapper.cjs --progress --env config=none",
-    "lint:fix": "eslint --fix .",
-    "lint": "eslint .",
+    "lint:fix": "eslint --fix --cache .",
+    "lint": "eslint --cache .",
     "format:fix": "prettier --write .",
     "format": "prettier .",
     "icon": "npx iconfont-h5",
@@ -53,6 +53,7 @@
     "@onflow/fcl": "^1.19.0",
     "@onflow/flow-wallet-reducers": "workspace:*",
     "@onflow/flow-wallet-shared": "workspace:*",
+    "@onflow/flow-wallet-extension-shared": "workspace:*",
     "@reown/walletkit": "^1.2.8",
     "@trustwallet/wallet-core": "^4.3.6",
     "@tsparticles/engine": "^3.8.1",
