--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -38,8 +38,8 @@
     "build-storybook": "storybook build"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,mjs}": "eslint",
-    "*.{json,js,ts,jsx,tsx,html,md,mdx,mjs}": "prettier --write"
+    "*.{js,jsx,ts,tsx,mjs}": "eslint --cache",
+    "*.{json,js,ts,jsx,tsx,html,md,mdx,mjs}": "prettier"
   },
   "dependencies": {
     "@coinbase/cbpay-js": "^1.10.0",
