chore: update package dependencies and clean up imports
- Added new dependencies '@luca/cases' and '@trustwallet/wallet-core' to package.json files.
- Removed unused Firebase imports and refactored authentication logic in userWallet and account-management services.
- Consolidated utility imports in various files for better organization.
- Updated the format of large numbers in the number utility for improved readability.

Closes #1190

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -47,16 +47,17 @@
     "@debank/common": "^0.3.60",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@luca/cases": "jsr:^1.0.0",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/system": "^7.2.0",
     "@noble/secp256k1": "^1.7.2",
     "@onflow/fcl": "^1.19.0",
+    "@onflow/flow-wallet-core": "workspace:*",
+    "@onflow/flow-wallet-data-model": "workspace:*",
+    "@onflow/flow-wallet-extension-shared": "workspace:*",
     "@onflow/flow-wallet-reducers": "workspace:*",
     "@onflow/flow-wallet-shared": "workspace:*",
-    "@onflow/flow-wallet-extension-shared": "workspace:*",
-    "@onflow/flow-wallet-data-model": "workspace:*",
-    "@onflow/flow-wallet-core": "workspace:*",
     "@reown/walletkit": "^1.2.8",
     "@trustwallet/wallet-core": "^4.3.6",
     "@tsparticles/engine": "^3.8.1",
