--- a/package.json
+++ b/package.json
@@ -158,8 +158,10 @@
     "file-loader": "^6.2.0",
     "globals": "^15.15.0",
     "html-webpack-plugin": "^5.6.3",
+    "husky": "^9.1.7",
     "i18next": "^24.2.3",
     "jszip": "^3.10.1",
+    "lint-staged": "^16.1.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "pinst": "^3.0.0",
