Update dependencies and refactor analytics service
- Updated @onflow/frw-core, @onflow/frw-data-model, and related packages to version 0.2.0 in package.json.
- Refactored analytics tracking from mixpanelTrack to analyticsService across various components and services.
- Replaced storage usage with local data functions in multiple files for better data management.
- Adjusted TypeScript configurations to include custom conditions and updated module resolution settings.
- Cleaned up imports and improved code organization in several UI components and hooks.

Closes #1209

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "ESNext",
+    "module": "NodeNext",
     "target": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "NodeNext",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
@@ -12,7 +12,7 @@
     "experimentalSpecifierResolution": "node",
     "transpileOnly": true,
     "compilerOptions": {
-      "module": "ESNext",
+      "module": "NodeNext",
       "target": "ESNext",
       "allowJs": true
     }
