--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "esModuleInterop": true,
     "useUnknownInCatchVariables": false,
     "resolveJsonModule": true,
+    "customConditions": ["@onflow/source"],
     "paths": {
       "@/*": ["./src/*"]
     },
