--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "pnpm -r build",
     "build:packages": "pnpm -F './packages/**' build",
     "build:extension": "pnpm -F extension build:dev",
-    "build:rn": "pnpm -F react-native android",
+    "build:rn": "pnpm -F FRWRN android",
     "dev": "pnpm -r --parallel build:watch",
     "dev:packages": "pnpm -F './packages/**' --parallel build:watch",
     "dev:extension": "pnpm -F extension build:dev",
-    "dev:rn": "pnpm -F react-native start",
+    "dev:rn": "pnpm -F FRWRN start",
     "clean": "pnpm -r clean && rm -rf **/node_modules && pnpm install",
     "test": "pnpm -r test",
     "lint": "pnpm -r lint",
