--- a/packages/stores/package.json
+++ b/packages/stores/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.4",
     "description": "Package for flow wallet stores",
     "type": "module",
-    "main": "./src/index.ts",
-    "types": "./src/index.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "files": [
         "src",
         "dist"
@@ -32,9 +32,13 @@
         }
     },
     "dependencies": {
+        "@babel/runtime": "^7.28.2",
         "@onflow/frw-api": "0.0.3",
         "@onflow/frw-types": "0.0.3",
         "@onflow/frw-workflow": "0.0.4",
         "zustand": "^5.0.6"
+    },
+    "devDependencies": {
+        "tsup": "^8.5.0"
     }
 }
