--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.3",
     "description": "Package for flow wallet data types",
     "type": "module",
-    "main": "./src/index.ts",
-    "types": "./src/index.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "files": [
         "src",
         "dist"
@@ -32,6 +32,7 @@
         }
     },
     "dependencies": {
+        "@babel/runtime": "^7.28.2",
         "@onflow/frw-api": "0.0.3"
     },
     "devDependencies": {
