--- a/packages/workflow/package.json
+++ b/packages/workflow/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.4",
     "description": "Package for flow wallet workflow",
     "type": "module",
-    "main": "./src/index.ts",
-    "types": "./src/index.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "files": [
         "src",
         "dist"
@@ -32,12 +32,16 @@
         }
     },
     "dependencies": {
+        "@babel/runtime": "^7.28.2",
         "@onflow/fcl": "^1.13.1",
         "@onflow/frw-cadence": "0.0.3",
-        "@onflow/util-encode-key": "^1.2.4"
+        "@onflow/transport-http": "^1.13.0",
+        "@onflow/util-encode-key": "^1.2.4",
+        "ethers": "^6.15.0",
+        "elliptic": "^6.5.7",
+        "sha3": "^2.1.4"
     },
     "devDependencies": {
-        "dotenv": "^16.4.5",
         "tsup": "^8.5.0"
     }
 }
