--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:packages": "pnpm -F './packages/**' --parallel build:watch",
     "dev:extension": "pnpm -F frw-extension build:dev",
     "dev:rn": "pnpm -F FRWRN start",
+    "dev:rn:full": "pnpm -F './packages/**' --parallel build:watch & pnpm -F FRWRN start",
     "clean": "pnpm -r clean && rm -rf **/node_modules && pnpm install",
     "test": "pnpm -r test",
     "lint": "pnpm -r lint",
