--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -54,6 +54,7 @@
     "@mui/system": "^7.2.0",
     "@noble/secp256k1": "^1.7.2",
     "@onflow/fcl": "^1.19.0",
+    "@onflow/frw-cadence": "workspace:*",
     "@reown/walletkit": "^1.2.8",
     "@trustwallet/wallet-core": "^4.3.6",
     "@tsparticles/engine": "^3.8.1",
