--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
-    "lib": ["ES2022"],
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "types": ["node"],
     "moduleResolution": "bundler",
     "declaration": true,
     "declarationMap": true,
@@ -17,8 +18,5 @@
     "noImplicitAny": false,
     "outDir": "./dist"
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "exclude": ["node_modules", "dist"]
 }
