feat: mark generated file to pass lint check

--- a/.prettierignore
+++ b/.prettierignore
@@ -24,6 +24,8 @@ packages/cadence/src/scripts/generated/
 **/generated/
 **/*.generated.ts
 **/*.generated.js
+**/*.gen.ts
+**/*.gen.js
 
 # Package manager
 .pnpm-store/
