--- a/packages/cadence/package.json
+++ b/packages/cadence/package.json
@@ -41,6 +41,8 @@
   "dependencies": {
     "@babel/runtime": "^7.28.2",
     "@onflow/fcl": "^1.13.1",
+    "@onflow/frw-utils": "workspace:*",
+    "@onflow/transport-http": "^1.13.0",
     "buffer": "^6.0.3"
   },
   "devDependencies": {
