--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "^22.11.0",
     "@vitest/coverage-v8": "3.2.4",
     "swagger-axios-codegen": "^0.17.4",
     "tsup": "^8.3.5",
