ci: add node for cadence and context package

--- a/packages/context/package.json
+++ b/packages/context/package.json
@@ -36,6 +36,7 @@
     "@onflow/frw-utils": "workspace:*"
   },
   "devDependencies": {
+    "@types/node": "^22.11.0",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   },
