--- a/packages/cadence/package.json
+++ b/packages/cadence/package.json
@@ -41,6 +41,7 @@
     "buffer": "^6.0.3"
   },
   "devDependencies": {
+    "@types/node": "^22.11.0",
     "@vitest/coverage-v8": "3.2.4",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
