--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,22 +1,57 @@
-name: Lint Check
+name: Lint
 
 on:
-  pull_request:
-    branches: [main, dev]
+  # Trigger the workflow on push or pull request,
+  # but only for the main branch
   push:
     branches: [main, dev]
 
+  # Replace pull_request with pull_request_target if you
+  # plan to use this action with forks, see the Limitations section
+  pull_request:
+    branches: [main, dev]
+
+# Down scope as necessary via https://docs.github.com/en/actions/security-guides/automatic-token-authentication#modifying-the-permissions-for-the-github_token
+permissions:
+  checks: write
+  contents: write
+
 jobs:
-  lint:
+  run-linters:
+    name: Run linters
     runs-on: ubuntu-latest
-    name: ESLint Check
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out Git repository
+        uses: actions/checkout@v4
 
-      - name: Lint Action
-        uses: wearerequired/lint-action@v2.3.0
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "pnpm"
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run linters
+        uses: wearerequired/lint-action@v2
         with:
           eslint: true
           eslint_extensions: ts,tsx,js,jsx
-          eslint_args: "--ext .ts,.tsx,.js,.jsx"
