--- a/.github/workflows/react-native.yml
+++ b/.github/workflows/react-native.yml
@@ -1,96 +1,124 @@
-# TODO: Re-enable this workflow once React Native build setup is finalized
-# name: React Native Validation
-#
-# on:
-#   push:
-#     paths:
-#       - "apps/react-native/**"
-#     branches: [main, dev]
-#   pull_request:
-#     paths:
-#       - "apps/react-native/**"
-#     branches: [main, dev]
-#
-# jobs:
-#   react-native-build-android:
-#     runs-on: ubuntu-latest
-#
-#     steps:
-#       - uses: actions/checkout@v4
-#
-#       - name: Setup pnpm
-#         uses: pnpm/action-setup@v4
-#
-#       - name: Setup Node.js
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: "20"
-#           cache: "pnpm"
-#
-#       - name: Setup Java 17
-#         uses: actions/setup-java@v4
-#         with:
-#           distribution: "temurin"
-#           java-version: "17"
-#
-#       - name: Install dependencies
-#         run: pnpm install --frozen-lockfile
-#
-#       - name: Build packages first
-#         run: pnpm -r --filter='./packages/*' build
-#
-#       - name: Regenerate bridge models after package build
-#         run: pnpm -F "frw-rn" codegen:bridge
-#
-#       - name: Build React Native Android (Debug)
-#         run: |
-#           cd apps/react-native/android
-#           chmod +x gradlew
-#           ./gradlew assembleDebug --no-daemon
-#         env:
-#           JAVA_HOME: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.*/x64
-#
-#   react-native-build-ios:
-#     runs-on: macos-latest
-#
-#     steps:
-#       - uses: actions/checkout@v4
-#
-#       - name: Setup pnpm
-#         uses: pnpm/action-setup@v4
-#
-#       - name: Setup Node.js
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: "20"
-#           cache: "pnpm"
-#
-#       - name: Setup Ruby (for CocoaPods)
-#         uses: ruby/setup-ruby@v1
-#         with:
-#           ruby-version: "3.1"
-#
-#       - name: Install dependencies
-#         run: pnpm install --frozen-lockfile
-#
-#       - name: Build packages first
-#         run: pnpm -r --filter='./packages/*' build
-#
-#       - name: Regenerate bridge models after package build
-#         run: pnpm -F "frw-rn" codegen:bridge
-#
-#       - name: Install CocoaPods dependencies
-#         run: |
-#           cd apps/react-native/ios
-#           bundle install
-#           bundle exec pod install
-#
-#       - name: Build React Native iOS (Debug)
-#         run: |
-#           cd apps/react-native/ios
-#           xcodebuild -workspace FRW.xcworkspace \
-#                      -scheme FRW \
-#                      -configuration Debug \
-#                      -destination 'platform=iOS Simulator,name=iPhone 14' \
-#                      -quiet \
-#                      build</edit>
+name: React Native Validation
+
+on:
+  push:
+    paths:
+      - "apps/react-native/**"
+    branches: [main, dev]
+  pull_request:
+    paths:
+      - "apps/react-native/**"
+    branches: [main, dev]
+
+jobs:
+  react-native-build-android:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "pnpm"
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: "17"
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Build packages first
+        run: pnpm -r --filter='./packages/*' build
+
+      - name: Regenerate bridge models after package build
+        run: pnpm -F "frw-rn" codegen:bridge
+
+      - name: Build React Native Android (Debug)
+        run: |
+          cd apps/react-native/android
+          chmod +x gradlew
+          ./gradlew assembleDebug --no-daemon
+        env:
+          JAVA_HOME: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.*/x64
+
+  react-native-build-ios:
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "pnpm"
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Setup Ruby (for CocoaPods)
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.4.4"
+          bundler-cache: true
+          working-directory: apps/react-native
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Build packages first
+        run: pnpm -r --filter='./packages/*' build
+
+      - name: Regenerate bridge models after package build
+        run: pnpm -F "frw-rn" codegen:bridge
+
+      - name: Install CocoaPods dependencies
+        run: |
+          cd apps/react-native
+          bundle install
+          cd ios
+          bundle exec pod install
+
+      - name: Build React Native iOS (Debug)
+        run: |
+          cd apps/react-native/ios
+          xcodebuild -workspace FRW.xcworkspace \
+                     -scheme FRW \
+                     -configuration Debug \
+                     -destination 'platform=iOS Simulator,name=iPhone 15' \
+                     -quiet \
+                     build</edit>
