--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -10,6 +10,8 @@ on:
     types: [opened, synchronize]
   pull_request_review_comment:
     types: [created]
+  push:
+    branches: [main, dev]
 
 jobs:
   review:
@@ -25,4 +27,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LLM_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-          LLM_MODEL: "claude-3-5-sonnet-20241022"
+          LLM_MODEL: "claude-sonnet-4-20250514"
