--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -2,10 +2,17 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "lib": ["ES2022", "DOM"]
   },
   "include": [
-    "src/**/*"
+    "src/**/*.ts",
+    "src/**/*.json",
+    "src/codgen/**/*.ts",
+    "tests/**/*.ts",
+    "__tests__/**/*.ts",
+    "tsup.config.ts",
+    "vitest.config.ts"
   ],
   "exclude": [
     "dist",
