--- a/packages/workflow/package.json
+++ b/packages/workflow/package.json
@@ -31,7 +31,7 @@
     "dependencies": {
         "@babel/runtime": "^7.28.2",
         "@onflow/fcl": "^1.13.1",
-        "@onflow/frw-cadence": "0.0.3",
+        "@onflow/frw-cadence": "workspace:*",
         "@onflow/transport-http": "^1.13.0",
         "@onflow/util-encode-key": "^1.2.4",
         "ethers": "^6.15.0",
@@ -39,6 +39,8 @@
         "sha3": "^2.1.4"
     },
     "devDependencies": {
-        "tsup": "^8.5.0"
+        "tsup": "^8.5.0",
+        "@vitest/coverage-v8": "3.2.4",
+        "vitest": "^3.2.4"
     }
 }
