--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,38 +1,38 @@
 {
-    "name": "@onflow/frw-types",
-    "version": "0.0.3",
-    "description": "Package for flow wallet data types",
-    "type": "module",
-    "main": "./dist/index.js",
-    "types": "./dist/index.d.ts",
-    "files": [
-        "src",
-        "dist"
-    ],
-    "scripts": {
-        "build": "tsup",
-        "build:watch": "tsup --watch",
-        "type-check": "tsc --noEmit",
-        "clean": "rm -rf dist",
-        "test": "vitest",
-        "test:run": "vitest --run",
-        "test:coverage": "vitest --coverage",
-        "prepublishOnly": "pnpm build",
-        "lint": "eslint . --cache",
-        "lint:fix": "eslint . --cache --fix"
-    },
-    "exports": {
-        ".": {
-            "types": "./dist/index.d.ts",
-            "import": "./dist/index.js",
-            "default": "./dist/index.js"
-        }
-    },
-    "dependencies": {
-        "@babel/runtime": "^7.28.2",
-        "@onflow/frw-api": "0.0.3"
-    },
-    "devDependencies": {
-        "tsup": "^8.5.0"
+  "name": "@onflow/frw-types",
+  "version": "0.0.3",
+  "description": "Package for flow wallet data types",
+  "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "src",
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsup",
+    "build:watch": "tsup --watch",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf dist",
+    "test": "vitest",
+    "test:run": "vitest --run",
+    "test:coverage": "vitest --coverage",
+    "prepublishOnly": "pnpm build",
+    "lint": "eslint . --cache",
+    "lint:fix": "eslint . --cache --fix"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
     }
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.28.2",
+    "@onflow/frw-api": "workspace:*"
+  },
+  "devDependencies": {
+    "tsup": "^8.5.0"
+  }
 }
