--- a/packages/workflow/package.json
+++ b/packages/workflow/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@babel/runtime": "^7.28.2",
     "@onflow/fcl": "^1.13.1",
-    "@onflow/frw-cadence": "0.0.3",
+    "@onflow/frw-cadence": "workspace:*",
     "@onflow/frw-context": "workspace:*",
     "@onflow/frw-utils": "workspace:*",
     "@onflow/transport-http": "^1.13.0",
