--- a/packages/cadence/package.json
+++ b/packages/cadence/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "source": "./src/index.ts",
   "files": [
     "src",
     "dist",
