--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -19,6 +19,7 @@
     "postinstall": "pnpm run codegen:bridge && pnpm run icon",
     "bundle:ios": "react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ios/main.jsbundle --assets-dest ios",
     "bundle:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+    "bundle:android:sourcemap": "react-native bundle --platform android --entry-file index.js --dev false --bundle-output android/app/src/main/assets/index.android.bundle --sourcemap-output ./android-sourcemap.json",
     "icon": "node scripts/icon-generator.js",
     "icon:force": "node scripts/icon-generator.js --force"
   },
@@ -38,6 +39,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/slider": "^4.5.7",
     "@react-native/gradle-plugin": "^0.80.1",
+    "@react-native/normalize-colors": "^0.80.2",
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.0.12",
     "@react-navigation/native-stack": "^7.1.13",
@@ -51,8 +53,10 @@
     "ethers": "^6.15.0",
     "i18next": "^25.3.2",
     "immer": "^10.1.1",
+    "instabug-reactnative": "^15.0.1",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
+    "react-freeze": "^1.0.4",
     "react-i18next": "^15.6.1",
     "react-native": "0.80.1",
     "react-native-css-interop": "^0.1.22",
