--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -21,19 +21,21 @@
     "bundle:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "bundle:android:sourcemap": "react-native bundle --platform android --entry-file index.js --dev false --bundle-output android/app/src/main/assets/index.android.bundle --sourcemap-output ./android-sourcemap.json",
     "icon": "node scripts/icon-generator.js",
-    "icon:force": "node scripts/icon-generator.js --force"
+    "icon:force": "node scripts/icon-generator.js --force",
+    "codepush:android:staging": "appcenter codepush release-react -a your-org/your-app-android -d Staging",
+    "codepush:android:production": "appcenter codepush release-react -a your-org/your-app-android -d Production"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.8",
     "@onflow/fcl": "^1.19.0",
-    "@onflow/frw-context": "workspace:*",
     "@onflow/frw-api": "workspace:*",
     "@onflow/frw-cadence": "workspace:*",
+    "@onflow/frw-context": "workspace:*",
     "@onflow/frw-services": "workspace:*",
     "@onflow/frw-stores": "workspace:*",
+    "@onflow/frw-types": "workspace:*",
     "@onflow/frw-utils": "workspace:*",
     "@onflow/frw-workflow": "workspace:*",
-    "@onflow/frw-types": "workspace:*",
     "@onflow/transport-http": "^1.13.0",
     "@onflow/types": "^1.4.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -59,6 +61,7 @@
     "react-freeze": "^1.0.4",
     "react-i18next": "^15.6.1",
     "react-native": "0.80.1",
+    "react-native-code-push": "^9.0.1",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-get-random-values": "^1.11.0",
