fix: only run test for extension files

--- a/.github/workflows/extension-build.yml
+++ b/.github/workflows/extension-build.yml
@@ -144,7 +144,7 @@ jobs:
           echo "All packages built successfully"
 
       - name: Run tests
-        run: pnpm test
+        run: pnpm -F frw-extension test:run
 
       - name: Build extension
         run: |
