--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -64,6 +64,7 @@
     "bignumber.js": "^9.3.0",
     "bip39": "^3.1.0",
     "browser-passworder": "^2.0.3",
+    "buffer": "^6.0.3",
     "compare-versions": "^4.1.4",
     "cross-fetch": "^4.1.0",
     "crypto-browserify": "^3.12.1",
@@ -74,6 +75,7 @@
     "ethereum-hdwallet": "^0.0.26",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^6.15.0",
+    "events": "^3.3.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.14.1",
     "hdkey": "0.8.0",
