--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -44,7 +44,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build all packages
-        run: pnpm build
+        run: pnpm build:packages
 
       - name: Run tests
         run: pnpm test
