--- a/packages/workflow/tsconfig.json
+++ b/packages/workflow/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "composite": true,
     "types": []
   },
   "include": ["src/**/*.ts", "src/**/*.json", "tsup.config.ts"],
