refactor: move codegen scripts to API package and fix directory structure
- Remove duplicate codegen scripts from React Native app
- Fix typo in API package codegen scripts (codgen -> codegen)
- Update React Native package.json to remove reference to deleted script
- Consolidate API generation in @onflow/frw-api package
- API package now handles all service generation centrally

--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -15,7 +15,7 @@
     "start": "react-native start",
     "test": "jest",
     "pod": "npx -y pod-install",
-    "codegen": "node scripts/codegen.js && react-native codegen",
+    "codegen": "react-native codegen",
     "codegen:bridge": "node scripts/bridge-codegen.js",
     "postinstall": "pnpm run codegen:bridge && pnpm run icon",
     "bundle:ios": "react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ios/main.jsbundle --assets-dest ios",
